--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*", "scripts/**/*"],
-  "exclude": ["node_modules", "input", "output", "cache"]
+  "exclude": ["node_modules", "input", "output"]
 }
