--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "reformat": "prettier --write .",
     "validate": "node scripts/validate.ts",
     "new": "node scripts/new.ts",
-    "check": "eslint . && prettier --check ."
+    "check": "eslint . && prettier --check .",
+    "prepare": "husky || true"
   },
   "dependencies": {
     "@shikijs/markdown-it": "^3.2.1",
@@ -26,6 +27,7 @@
     "@types/markdown-it": "^14.1.2",
     "@types/node": "^22.13.1",
     "eslint": "^9.20.0",
+    "husky": "^9.1.7",
     "eslint-config-prettier": "^10.0.1",
     "prettier": "^3.5.1",
     "typescript": "^5.7.3",
